# term-rewriting

./: Cargo.toml  README.md  match-same.txt  mu.txt  out.txt  peano.txt  prop.txt  turing.txt
src/: expr.rs  interpolate.rs  lib.rs  main.rs  matches.rs  parse.rs  reduce.rs  repl.rs  symbol_table.rs  unparse.rs
